MAINT: change RNG imports (#943)
* MAINT: raise an AttributeError for unknown attributes in `random`

* EXAMP: fix rng usage

* EXAMP: fix rng usage

* MAINT: fix rng in tutorials

* MAINT: change rng imports

* BUG: fix incorrect import

* DOC: add API doc for `bilby.core.utils.random`

* DOC: improve doc-strings for random submodule

* DOC: add RNG docs

* REVERT: "MAINT: fix rng in tutorials"

This reverts commit 5114ec9078c63f120cbef8d7b688634012d7b863.

* EXAMP: fix RNG imports in tutorials

* STY: remove notebook metadata

* ENH: add warning when calling `seed` if `rng` has been imported

* TST: add tests for `random` submodule

--- a/examples/tutorials/fitting_with_x_and_y_errors.ipynb
+++ b/examples/tutorials/fitting_with_x_and_y_errors.ipynb
@@ -18,10 +18,10 @@
     "import bilby\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "from bilby.core.utils.random import seed, rng\n",
+    "from bilby.core.utils import random\n",
     "\n",
     "#sets seed of bilby's generator \"rng\" to \"123\"\n",
-    "seed(123)\n",
+    "random.seed(123)\n",
     "\n",
     "%matplotlib inline"
    ]
@@ -52,8 +52,8 @@
     "    xtrue = np.linspace(0, 100, points)\n",
     "    ytrue = model(x=xtrue, m=m, c=c)\n",
     "\n",
-    "    xerr_vals = xerr * rng.standard_normal(points)\n",
-    "    yerr_vals = yerr * rng.standard_normal(points)\n",
+    "    xerr_vals = xerr * random.rng.standard_normal(points)\n",
+    "    yerr_vals = yerr * random.rng.standard_normal(points)\n",
     "    xobs = xtrue + xerr_vals\n",
     "    yobs = ytrue + yerr_vals\n",
     "\n",
