--- a/examples/tutorials/compare_samplers.ipynb
+++ b/examples/tutorials/compare_samplers.ipynb
@@ -22,10 +22,10 @@
     "import bilby\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from bilby.core.utils.random import seed, rng\n",
+    "from bilby.core.utils import random\n",
     "\n",
     "# Sets seed of bilby's generator \"rng\" to \"123\" to ensure reproducibility\n",
-    "seed(123)\n",
+    "random.seed(123)\n",
     "\n",
     "%matplotlib inline"
    ]
@@ -82,8 +82,8 @@
     "time_duration = 10\n",
     "time = np.arange(0, time_duration, 1 / sampling_frequency)\n",
     "N = len(time)\n",
-    "sigma = rng.normal(1, 0.01, N)\n",
-    "data = model(time, **injection_parameters) + rng.normal(0, sigma, N)\n",
+    "sigma = random.rng.normal(1, 0.01, N)\n",
+    "data = model(time, **injection_parameters) + random.rng.normal(0, sigma, N)\n",
     "\n",
     "fig, ax = plt.subplots()\n",
     "ax.plot(time, data, \"x\", label=\"Data\")\n",
